website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: deepak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: REGISTRY_SERVER:32000/website-image:ver.BUILD_NUMBER
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mademi-service
  namespace: deepak
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30443
