ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: deepak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: env_url
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mademi-service
            port:
              number: 80
